--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@ Api.sendRequest("نعم",context)
 function nobye(){
 var latestResponse= Api.getResponsePayload();
 var context = latestResponse.context;
-Api.sendRequest("نعم",context)
+Api.sendRequest("لا",context)
 }
 </script>
   <div id="view-change-button" class="button" onclick="PayloadPanel.togglePanel(event, this)">
